--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
-gtk-theme-name = Adapta-Nokto
-gtk-icon-theme-name = "La Capitaine Icon Theme"
+gtk-theme-name = FlatColor
+gtk-icon-theme-name = FlattrColor
 gtk-font-name = SF Pro Display
